# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  common.cpp  common.hpp  hittable.hpp  image.cpp  image.hpp  main.cpp  material.cpp  material.hpp  ray.hpp  renderer.cpp  renderer.hpp  sphere.cpp  sphere.hpp  vec3.hpp  world.cpp  world.hpp
